--- a/PhoneBook/frontend/index.html
+++ b/PhoneBook/frontend/index.html
@@ -106,16 +106,14 @@
         <table>
             <thead>
                 <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
+                    <th>Name</th>
                     <th>Number</th>
-                    <th>Actions</th>
+                    <th></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody">
                 <tr>
                     <td>arjun</td>
-                    <td>das</td>
                     <td>number</td>
                     <td>
                         <button class="btn btn-edit">Edit</button>
@@ -125,5 +123,6 @@
             </tbody>
         </table>
     </div>
+    <script src="./add.js"></script>
 </body>
 </html>
