--- a/PhoneBook/frontend/pages/add.html
+++ b/PhoneBook/frontend/pages/add.html
@@ -95,7 +95,7 @@
 <body>
     <div class="form-container">
         <h1>Add Contact</h1>
-        <form action="#" method="post">
+        <form action="#" method="" id="form">
             <div class="form-group">
                 <label for="firstname">First Name</label>
                 <input type="text" id="firstname" name="firstname" placeholder="Enter first name" required>
@@ -109,12 +109,14 @@
                 <input type="tel" id="number" name="number" placeholder="Enter phone number" required>
             </div>
             <div class="form-group">
-                <button type="submit">Save Contact</button>
+                <button type="submit" id="sumbit">Save Contact</button>
             </div>
         </form>
         <div class="home-link">
             <a href="../index.html">Home</a>
         </div>
     </div>
+
+    <script src="../add.js"></script>
 </body>
 </html>
